--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,11 @@
     <string name="delete_task">Delete task</string>
     <string name="are_you_sure_you_want_to_delete_this_task">Are you sure you want to delete this task?</string>
     <string name="delete">Delete</string>
+    <string name="update">Update</string>
     <string name="cancel">Cancel</string>
     <string name="not_done">Not done</string>
+    <string name="show_done_task">Show done tasks</string>
+    <string name="show_not_done_task">Show not done tasks </string>
+    <string name="show_all_task">Show all tasks</string>
+    <string name="state">State</string>
 </resources>
